part-1/1.08/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin
  template:
    metadata:
      labels:
        app: gin
    spec:
      containers:
        - name: gin
          image: zhubao/devops_gin_0.1:latest
          ports:
            - containerPort: 9999
